Modified routes and add user auth endpoint

--- a/.example.env
+++ b/.example.env
@@ -4,7 +4,7 @@
 # 1. Duplicate .example.env, rename to .env
 # 2. Modify variable to the list below.
 
-DB_NAME=basicsqlalchemy
+DB_NAME=basicsqlalchemy   # Optional, change if unnecessary
 DB_USER=root              # Optional, change if unnecessary
 DB_PASSWORD=1234          # Optional, change if unnecessary
 DB_HOST=172.17.0.1        # Optional, change if unnecessary
@@ -14,3 +14,11 @@ APP_HOST=0.0.0.0
 APP_PORT=8888
 
 APP_MODE=TESTING
+
+API_PREFIX=/api/v1
+
+# Token Info
+ACCESS_TOKEN_VALIDITY=11520  # 60 minutes * 24 hours * 8 days = 8 days
+REFRESH_TOKEN_VALIDITY=120
+TOKEN_ISSUER=starterkit
+TOKEN_AUDIENCE=starterkit_users
