--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 astroid==2.3.3
 attrs==19.3.0
 autopep8==1.5.2
+bcrypt==3.1.7
 certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
 click==7.1.1
+dnspython==1.16.0
+email-validator==1.1.0
 fastapi==0.54.1
 h11==0.9.0
 httptools==0.1.1
@@ -14,14 +18,18 @@ mccabe==0.6.1
 more-itertools==8.2.0
 mysqlclient==1.4.6
 packaging==20.3
+passlib==1.7.2
 pluggy==0.13.1
 py==1.8.1
 pycodestyle==2.5.0
+pycparser==2.20
 pydantic==1.5.1
+PyJWT==1.7.1
 pylint==2.4.4
 pyparsing==2.4.7
 pytest==5.4.1
 python-dotenv==0.13.0
+python-multipart==0.0.5
 requests==2.23.0
 six==1.14.0
 SQLAlchemy==1.3.16
