Add alembic support

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.4.2
 astroid==2.3.3
 attrs==19.3.0
 autopep8==1.5.2
@@ -14,6 +15,8 @@ httptools==0.1.1
 idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
+Mako==1.1.2
+MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.2.0
 mysqlclient==1.4.6
@@ -28,7 +31,9 @@ PyJWT==1.7.1
 pylint==2.4.4
 pyparsing==2.4.7
 pytest==5.4.1
+python-dateutil==2.8.1
 python-dotenv==0.13.0
+python-editor==1.0.4
 python-multipart==0.0.5
 requests==2.23.0
 six==1.14.0
