--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,46 @@
-alembic==1.4.2
-astroid==2.3.3
-attrs==19.3.0
-autopep8==1.5.2
-bcrypt==3.1.7
-certifi==2020.4.5.1
-cffi==1.14.0
-chardet==3.0.4
-click==7.1.1
-dnspython==1.16.0
-email-validator==1.1.0
-fastapi==0.54.1
-h11==0.9.0
-httptools==0.1.1
-idna==2.9
-isort==4.3.21
-lazy-object-proxy==1.4.3
-Mako==1.1.2
+alembic==1.5.7
+astroid==2.5.1
+attrs==20.3.0
+autopep8==1.5.6
+bcrypt==3.2.0
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+dnspython==2.1.0
+email-validator==1.1.2
+fastapi==0.63.0
+greenlet==1.0.0
+h11==0.12.0
+idna==2.10
+iniconfig==1.1.1
+isort==5.7.0
+lazy-object-proxy==1.5.2
+Mako==1.1.4
 MarkupSafe==1.1.1
 mccabe==0.6.1
-more-itertools==8.2.0
-mysqlclient==1.4.6
-packaging==20.3
-passlib==1.7.2
+mysqlclient==2.0.3
+packaging==20.9
+passlib==1.7.4
 pluggy==0.13.1
-py==1.8.1
-pycodestyle==2.5.0
+py==1.10.0
+pycodestyle==2.7.0
 pycparser==2.20
-pydantic==1.5.1
-PyJWT==1.7.1
-pylint==2.4.4
+pydantic==1.8.1
+PyJWT==2.0.1
+pylint==2.7.2
 pyparsing==2.4.7
-pytest==5.4.1
+pytest==6.2.2
 python-dateutil==2.8.1
-python-dotenv==0.13.0
+python-dotenv==0.15.0
 python-editor==1.0.4
 python-multipart==0.0.5
-requests==2.23.0
-six==1.14.0
-SQLAlchemy==1.3.16
-starlette==0.13.2
-urllib3==1.25.9
-uvicorn==0.11.3
-uvloop==0.14.0
-wcwidth==0.1.9
-websockets==8.1
-wrapt==1.11.2
+requests==2.25.1
+six==1.15.0
+SQLAlchemy==1.4.0
+starlette==0.13.6
+toml==0.10.2
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+uvicorn==0.13.4
+wrapt==1.12.1
